--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="keywords" content="IP 信誉检测,DNS 泄露,IP 黑名单,浏览器安全,域名被墙,VPN 检测,隐私工具,ToolXp">
 <meta name="robots" content="index, follow">
 <link rel="canonical" href="https://toolxp.com/">
-<link rel="icon" href="https://obfusx.907000.xyz/obfusx-logo.png" type="image/png">
+<link rel="icon" href="https://code.907000.xyz/logo.png" type="image/png">
 
 <link rel="icon" href="C:\Users\9527\Desktop\abc\123.png" type="image/png">
 <script type="application/ld+json">
