Update and rename 21.html to 22.html

--- a/22.html
+++ b/22.html
@@ -885,10 +885,10 @@ window.addEventListener("DOMContentLoaded", () => {
     container.style.color = "#ddd";
     container.style.fontSize = "17px";
 /* 激活呼吸灯效果的类 */
-	container.style.width: 95%;
-	container.style.max-wudth: 875px;
-    container.style.animation: breathing 3s ease-in-out infinite;
-	container.style.transition: box-shadow 0.3s ease;
+	container.style.width = 95%;
+	container.style.max-wudth = 875px;
+    container.style.animation = breathing 3s ease-in-out infinite;
+	container.style.transition = box-shadow 0.3s ease;
 
 
     const table = document.createElement("table");
