--- a/20.html
+++ b/20.html
@@ -880,15 +880,15 @@ window.addEventListener("DOMContentLoaded", () => {
   function showResultHTML(items, score) {
     const container = document.createElement("div");
     container.style.margin = "auto";
-    container.style.borderRadius = "8px";
+    container.style.borderRadius = "25px";
     container.style.padding = "20px";
     container.style.color = "#ddd";
     container.style.fontSize = "17px";
 /* 激活呼吸灯效果的类 */
-	container.style.width = 95%;
-	container.style.max-wudth = 875px;
-    container.style.animation = breathing 3s ease-in-out infinite;
-	container.style.transition = box-shadow 0.3s ease;
+	container.style.width = "95%";
+	container.style.max-wudth = "875px";
+    container.style.animation = "breathing 3s ease-in-out infinite";
+	container.style.transition = "box-shadow 0.3s ease";
 
 
     const table = document.createElement("table");
