Update and rename 123.html to 127.html

--- a/127.html
+++ b/127.html
@@ -927,7 +927,8 @@ window.addEventListener("DOMContentLoaded", () => {
     footer.style.marginTop = "50px";
     footer.style.fontSize = "21px";
     footer.style.textAlign = "center";
-	footer.style.font-weight = "bold";
+    footer.style.fontWeight = "bold";
+
 	  
     footer.innerHTML = `🎯 使用 VPN/代理 的可能性为：<strong style="color:${color}">${score}%</strong>`;
 
